fix: css fix for logo z-index

--- a/css/nyhackr.css
+++ b/css/nyhackr.css
@@ -45,6 +45,7 @@ body {
 
 .logo > img {
   position: absolute;
+  z-index: 999;
   padding-top: 0.5em;
   max-width: 6em;
   height: auto;
